springboot-docker-crud

--- a/springboot-docker/src/main/resources/templates/hello.html
+++ b/springboot-docker/src/main/resources/templates/hello.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Hello World App</title>
+<title>Welcome</title>
 </head>
 <body>
  <h1 th:text="${message}"> </h1>
